--- a/ToDo/css/style.css
+++ b/ToDo/css/style.css
@@ -106,7 +106,7 @@ input {
   background-color: #53ceda;
 }
 
-/* .shade {
+.shade {
   display: none;
   position: absolute;
   top:0;
@@ -114,4 +114,4 @@ input {
   right: 0;
   left: 0;
   z-index: 1
-} */
+}
